--- a/views/dice.erb
+++ b/views/dice.erb
@@ -24,6 +24,8 @@
 
     <div class="container mt-5">
       <h1>KIEI-451 Casino!</h1>
+      <img src="/images/dice/<%= @die1 %>.png">
+      <img src="/images/dice/<%= @die2 %>.png">
     </div>
 
     <!-- Optional JavaScript -->
